--- a/LexiconLMS/Client/Pages/ActivityDetails.razor
+++ b/LexiconLMS/Client/Pages/ActivityDetails.razor
@@ -59,10 +59,16 @@
 		</div>
 	</div>
 	<div class="col-lg-6 mb-3">
-		<div class="card bg-light shadow">
-			<div class="card-header bg-light fw-bold">Documents:</div>
-			<div class="card-body">
+		<div class="card bg-light shadow mb-5">
+			<div class="card-header bg-light fw-bold">Activity Documents:</div>
+			<div class="card-body overflow-auto" style="max-height: 210px;">
 				<DocumentList List="ActivityDocuments"></DocumentList>
+			</div>
+		</div>
+		<div class="card bg-light shadow ">
+			<div class="card-header bg-light fw-bold">Student Documents:</div>
+			<div class="card-body overflow-auto" style="max-height: 185px;">
+				<DocumentList List="StudentActivityDocuments"></DocumentList>
 			</div>
 		</div>
 	</div>
