--- a/LexiconLMS/Client/Pages/ModuleDetails.razor
+++ b/LexiconLMS/Client/Pages/ModuleDetails.razor
@@ -47,13 +47,20 @@
 		</div>
 	</div>
 	<div class="col-lg-6 mb-3">
-		<div class="card bg-light shadow">
-			<div class="card-header bg-light fw-bold">Documents:</div>
-			<div class="card-body overflow-auto" style="max-height: 400px;">
+		<div class="card bg-light shadow mb-5">
+			<div class="card-header bg-light fw-bold">Module Documents:</div>
+			<div class="card-body overflow-auto" style="max-height: 210px;">
 				<DocumentList List="ModuleDocuments"></DocumentList>
 			</div>
 		</div>
+		<div class="card bg-light shadow ">
+			<div class="card-header bg-light fw-bold">Student Documents:</div>
+			<div class="card-body overflow-auto" style="max-height: 185px;">
+				<DocumentList List="StudentDocuments"></DocumentList>
+			</div>
+		</div>
 	</div>
+	
 </div>
 
 <div class="row flex-row-reverse">
