--- a/LexiconLMS/Client/Pages/ActivityUpdate.razor
+++ b/LexiconLMS/Client/Pages/ActivityUpdate.razor
@@ -20,7 +20,7 @@
 		<div class="d-lg-table col-lg-8">
 			<div class="row d-lg-table-row mb-3 mb-lg-0">
 				<div class="d-lg-table-cell w-auto pe-1 pb-lg-3">
-					<label for="name" class="col-form-labelo">Name: </label>
+					<label for="name" class="col-form-label">Name: </label>
 				</div>
 				<div class="d-lg-table-cell ps-lg-0 pb-lg-3">
 					<InputText id="name" class="form-control" @bind-Value="@Activity.Name" placeholder="Name"></InputText>
@@ -30,10 +30,10 @@
 
 			<div class="row d-lg-table-row mb-3 mb-lg-0">
 				<div class="d-lg-table-cell w-auto pe-1 pb-lg-3">
-					<label for="name" class="col-form-labelo">Name: </label>
+					<label for="activityType" class="col-form-label text-nowrap">Activity Type: </label>
 				</div>
 				<div class="d-lg-table-cell ps-lg-0 pb-lg-3">
-					<InputText id="name" class="form-control" @bind-Value="@Activity.Type.Name" placeholder="Activity Type"></InputText>
+					<InputText id="activityType" class="form-control" @bind-Value="@Activity.Type.Name" placeholder="Activity Type"></InputText>
 					<ValidationMessage class="offset-md-3" For="@(() => Activity.Type.Name)" />
 				</div>
 			</div>
