--- a/LexiconLMS/Client/Pages/AssignmentDetailsOfAStudent.razor
+++ b/LexiconLMS/Client/Pages/AssignmentDetailsOfAStudent.razor
@@ -2,7 +2,9 @@
 @using LexiconLMS.Shared.Dtos
 @using LexiconLMS.Shared.Dtos.ActivitiesDtos
 @using LexiconLMS.Shared.Entities
+@using Microsoft.AspNetCore.Authorization
 @attribute [Route(UriHelper.AssignmentDetailsOfAStudent)]
+@attribute [Authorize]
 
 <AssignmentDetailsComponent ActivityId="@ActivityId" StudentId="@StudentId"></AssignmentDetailsComponent>
 
