add incomplete activities list to course details

--- a/LexiconLMS/Client/Pages/CourseDetails.razor
+++ b/LexiconLMS/Client/Pages/CourseDetails.razor
@@ -67,7 +67,7 @@
 		<div class="card bg-light shadow">
 			<div class="card-header bg-light fw-bold">Activities</div>
 			<div class="card-body">
-				<ActivitiesSchedule />
+				<ActivityList ActivityLst="Activities" />
 			</div>
 		</div>
 	</div>
