fixed validation, added highlights to current module and current actovity and some navigation where it was missing

--- a/LexiconLMS/Client/Components/ActivityList.razor
+++ b/LexiconLMS/Client/Components/ActivityList.razor
@@ -15,7 +15,7 @@
         {
             @foreach (var activity in ActivityLst)
             {
-                <tr>
+                <tr style="@GetRowStyle(activity)">
                     <td scope="row">@activity.Name</td>
                     <td scope="row">@activity.Type.Name</td>
                     <td scope="row">@activity.StartDate</td>
