--- a/LexiconLMS/Client/Pages/ModuleDetails.razor
+++ b/LexiconLMS/Client/Pages/ModuleDetails.razor
@@ -14,7 +14,7 @@
 	else
 	{
 		<div>
-			<h3>@Module.Name</h3>
+			<h3>Module: @Module.Name</h3>
 			<p class="fs-6 text-muted">@Module.StartDate.ToShortDateString() − @Module.EndDate.ToShortDateString()</p>
 		</div>
 	}
