--- a/LexiconLMS/Client/Pages/ActivityDetails.razor
+++ b/LexiconLMS/Client/Pages/ActivityDetails.razor
@@ -1,4 +1,6 @@
-﻿@attribute [Route(UriHelper.ActivityDetails)]
+﻿@using Microsoft.AspNetCore.Authorization
+@attribute [Route(UriHelper.ActivityDetails)]
+@attribute [Authorize]
 
 <button class="btn btn-outline-primary py-1 mb-3" @onclick="@(()=> NavigationManager.NavigateTo(UriHelper.GetModuleDetailsUri(Activity.ModuleId)))">To Module</button>
 
@@ -23,15 +25,15 @@
 	{
 		<p class="alert alert-success">@Message</p>
 	}
-@* 	 <AuthorizeView Roles="Teacher">
-          <Authorized> *@
 	<div class="mb-3">
 		<button class="btn btn-info" @onclick="@(() => {NavigationManager.NavigateTo($"documentupload/{Activity.Id}");})">Upload Document</button>
-		<button class="btn btn-info" @onclick="@(() => {NavigationManager.NavigateTo($"activityUpdate/{Activity.Id}");})">Update Activty</button>
-		<button class="btn btn-danger" @onclick="@(() => DeleteActivity())">Delete Activity</button>
+		<AuthorizeView Roles="Teacher">
+			<Authorized>
+				<button class="btn btn-info" @onclick="@(() => {NavigationManager.NavigateTo($"activityUpdate/{Activity.Id}");})">Update Activty</button>
+				<button class="btn btn-danger" @onclick="@(() => DeleteActivity())">Delete Activity</button>
+			</Authorized>
+		</AuthorizeView>
 	</div>
-@* 		</Authorized>
-	</AuthorizeView> *@
 
 </div>
 
@@ -52,9 +54,9 @@
 				<span style="font-weight: bold;">Activity Type:</span> @Activity.Type.Name <br />
 				<span style="font-weight: bold;">Start:</span> @Module.StartDate <br />
 				<span style="font-weight: bold;">End:</span> @Module.EndDate <br />
-				  <br />
-				
-				
+				<br />
+
+
 			</div>
 		</div>
 	</div>
