--- a/LexiconLMS/Client/Pages/AssignmentDetailsOfAStudent.razor
+++ b/LexiconLMS/Client/Pages/AssignmentDetailsOfAStudent.razor
@@ -4,7 +4,7 @@
 @using LexiconLMS.Shared.Entities
 @using Microsoft.AspNetCore.Authorization
 @attribute [Route(UriHelper.AssignmentDetailsOfAStudent)]
-@attribute [Authorize]
+@attribute [Authorize(Roles = nameof(StaticUserRoles.Teacher))]
 
 <AssignmentDetailsComponent ActivityId="@ActivityId" StudentId="@StudentId"></AssignmentDetailsComponent>
 
