--- a/LexiconLMS/Client/Pages/ActivityAdd.razor
+++ b/LexiconLMS/Client/Pages/ActivityAdd.razor
@@ -54,7 +54,8 @@
 					<label for="start-date" class="col-form-label">Start date: </label>
 				</div>
 				<div class="d-lg-table-cell ps-lg-0 pb-lg-3">
-					<InputDate id="start-date" class="form-control" @bind-Value="@Activity.StartDate" placeholder="Start date"></InputDate>
+					<InputDate id="start-date" class="form-control" Type="InputDateType.DateTimeLocal" @bind-Value="@Activity.StartDate" placeholder="Start date"></InputDate>
+				
 				</div>
 			</div>
 
@@ -63,7 +64,7 @@
 					<label for="end-date" class="col-form-label">End date: </label>
 				</div>
 				<div class="d-lg-table-cell ps-lg-0 pb-lg-3">
-					<InputDate id="end-date" class="form-control" @bind-Value="@Activity.EndDate" placeholder="End date"></InputDate>
+					<InputDate id="end-date" class="form-control" Type="InputDateType.DateTimeLocal" @bind-Value="@Activity.EndDate" placeholder="End date"></InputDate>
 				</div>
 			</div>
 
