--- a/LexiconLMS/Client/Pages/ActivityDetails.razor
+++ b/LexiconLMS/Client/Pages/ActivityDetails.razor
@@ -52,8 +52,8 @@
 			<div class="card-body">
 				<span style="font-weight: bold;">Module:</span> @Module.Name <br />
 				<span style="font-weight: bold;">Activity Type:</span> @Activity.Type.Name <br />
-				<span style="font-weight: bold;">Start:</span> @Module.StartDate <br />
-				<span style="font-weight: bold;">End:</span> @Module.EndDate <br />
+				<span style="font-weight: bold;">Start:</span> @Activity.StartDate <br />
+				<span style="font-weight: bold;">End:</span> @Activity.EndDate <br />
 				<br />
 
 
