--- a/LexiconLMS/Client/Pages/ModuleDetails.razor
+++ b/LexiconLMS/Client/Pages/ModuleDetails.razor
@@ -43,7 +43,9 @@
 			<div class="card-header bg-light fw-bold">Activities:</div>
 			<div class="card-body">
 				@* type="button" data-bs-toggle="modal" data-bs-target="#addActivity" *@
+			<AuthorizeView Roles="@StaticUserRoles.Teacher.ToString()">
 				<button class="btn btn-outline-primary py-1 mb-3" @onclick="@(() => {NavigationManager.NavigateTo(UriHelper.GetActivityAddUri(Module.Id));})">Add activity</button>
+				</AuthorizeView>
 				<div class="overflow-auto" style="max-height: 400px;">
 					<ActivityList ActivityLst="Activities"></ActivityList>
 				</div>
