--- a/LexiconLMS/Client/Shared/NavMenu.razor
+++ b/LexiconLMS/Client/Shared/NavMenu.razor
@@ -21,11 +21,11 @@
                         <span class="oi oi-plus" aria-hidden="true"></span> My Course
                     </NavLink>
                 </div>
-                <div class="nav-item px-3">
+       @*          <div class="nav-item px-3">
                     <NavLink class="nav-link" href="activitieslist">
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Activities
                     </NavLink>
-                </div>
+                </div> *@
             </Authorized>
         </AuthorizeView>
         <AuthorizeView Roles="Teacher"> @* This shows only to Teachers. *@
